--- a/MDK-ARM/TEST/TEST.build_log.htm
+++ b/MDK-ARM/TEST/TEST.build_log.htm
@@ -27,7 +27,20 @@ Project File Date:  05/11/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\KEIL5\ARM\ARMCC\Bin'
 Build target 'TEST'
-".\TEST\TEST.axf" - 0 Error(s), 0 Warning(s).
+compiling debug_uart5.c...
+compiling config.c...
+compiling usb2uart.c...
+compiling DynamixelMotor.c...
+compiling stm32f7xx_it.c...
+compiling clock_init.c...
+compiling main.c...
+../Src/main.c(41): warning:  #177-D: variable "test"  was declared but never referenced
+  	u8 test[] = "HELLO";
+../Src/main.c: 1 warning, 0 errors
+linking...
+Program Size: Code=9180 RO-data=1072 RW-data=28 ZI-data=1924  
+FromELF: creating hex file...
+".\TEST\TEST.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +63,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:07
 </pre>
 </body>
 </html>
