--- a/MDK-ARM/TEST/TEST.build_log.htm
+++ b/MDK-ARM/TEST/TEST.build_log.htm
@@ -27,20 +27,24 @@ Project File Date:  05/11/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\KEIL5\ARM\ARMCC\Bin'
 Build target 'TEST'
-compiling debug_uart5.c...
-compiling config.c...
-compiling usb2uart.c...
-compiling DynamixelMotor.c...
-compiling stm32f7xx_it.c...
-compiling clock_init.c...
 compiling main.c...
-../Src/main.c(41): warning:  #177-D: variable "test"  was declared but never referenced
+../Src/main.c(38): warning:  #177-D: variable "flag"  was declared but never referenced
+  	u8 flag = 0;
+../Src/main.c(39): warning:  #177-D: variable "test"  was declared but never referenced
   	u8 test[] = "HELLO";
-../Src/main.c: 1 warning, 0 errors
+../Src/main.c(40): warning:  #177-D: variable "DXL_Handler"  was declared but never referenced
+  	DXL_HandlerTypeDef DXL_Handler;
+../Src/main.c(41): warning:  #177-D: variable "torque_en"  was declared but never referenced
+  	u8 torque_en[] = {0x40,0x00,0x01};
+../Src/main.c(42): warning:  #177-D: variable "param1"  was declared but never referenced
+    u8 param1[] = {0x74,0x00,0x00,0x02,0x00,0x00};
+../Src/main.c(43): warning:  #177-D: variable "param2"  was declared but never referenced
+  	u8 param2[] = {0x74,0x00,0xF4,0x0F,0x00,0x00};
+../Src/main.c: 6 warnings, 0 errors
 linking...
-Program Size: Code=9180 RO-data=1072 RW-data=28 ZI-data=1924  
+Program Size: Code=8388 RO-data=560 RW-data=20 ZI-data=1508  
 FromELF: creating hex file...
-".\TEST\TEST.axf" - 0 Error(s), 1 Warning(s).
+".\TEST\TEST.axf" - 0 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -63,7 +67,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:07
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
