--- a/MDK-ARM/TEST/TEST.build_log.htm
+++ b/MDK-ARM/TEST/TEST.build_log.htm
@@ -22,7 +22,7 @@ Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
 C:\Users\123\Desktop\TEST\TEST\MDK-ARM\TEST.uvprojx
-Project File Date:  06/19/2020
+Project File Date:  06/22/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\KEIL5\ARM\ARMCC\Bin'
@@ -30,15 +30,19 @@ Build target 'TEST'
 compiling main.c...
 ../Src/main.c(42): warning:  #177-D: variable "i"  was declared but never referenced
   	u32 i=0;
+../Src/main.c(43): warning:  #177-D: variable "temp"  was declared but never referenced
+  	u8 temp=0;
+../Src/main.c(44): warning:  #177-D: variable "ts"  was declared but never referenced
+  	u32 ts=0;
 ../Src/main.c(45): warning:  #177-D: variable "test"  was declared but never referenced
   	u8 test[] = "hello";
 ../Src/main.c(46): warning:  #177-D: variable "len"  was declared but never referenced
   	u8 len;
-../Src/main.c: 3 warnings, 0 errors
+../Src/main.c: 5 warnings, 0 errors
 linking...
-Program Size: Code=10448 RO-data=568 RW-data=20 ZI-data=67740  
+Program Size: Code=12828 RO-data=568 RW-data=20 ZI-data=2280  
 FromELF: creating hex file...
-".\TEST\TEST.axf" - 0 Error(s), 3 Warning(s).
+".\TEST\TEST.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
